--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
         "connected-react-router": "^4.3.0",
         "laravel-elixir-svg-symbols": "^1.0.1",
         "md5": "^2.2.1",
+        "moment": "^2.22.2",
         "prop-types": "^15.6.2",
         "react-draft-wysiwyg": "^1.12.13",
+        "react-helmet": "^5.2.0",
         "react-lz-editor": "^0.12.1",
         "react-quill": "^1.3.0",
         "react-redux": "^5.0.7",
