--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "doctrine/dbal": "^2.8",
         "encore/laravel-admin": "^1.5",
         "fideloper/proxy": "^4.0",
+        "folklore/graphql": "^1.1",
         "intervention/image": "^2.4",
         "jenssegers/date": "^3.4",
         "laravel-admin-ext/media-manager": "^1.0",
