--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "cross-env": "^5.1",
         "css-loader": "^1.0.0",
         "file-loader": "^2.0.0",
+        "jspolyfill-array.prototype.findIndex": "^0.1.0",
         "less": "^3.0.4",
         "less-loader": "^4.1.0",
         "lodash": "^4.17.4",
