--- a/package.json
+++ b/package.json
@@ -50,8 +50,10 @@
         "connected-react-router": "^4.3.0",
         "graphql": "^14.0.2",
         "immutability-helper": "^2.8.1",
+        "js-cookie": "^2.2.0",
         "md5": "^2.2.1",
         "moment": "^2.22.2",
+        "numeralize-ru": "^1.0.1",
         "prop-types": "^15.6.2",
         "react": "^16.5.2",
         "react-apollo": "^2.2.1",
