--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
         "autoprefixer": "^9.2.1",
         "axios": "^0.18.0",
         "babel-loader": "^8.0.4",
+        "babel-minify-webpack-plugin": "^0.3.1",
+        "babel-preset-minify": "^0.5.0",
         "cross-env": "^5.1",
         "css-loader": "^1.0.0",
         "file-loader": "^2.0.0",
